--- a/install
+++ b/install
@@ -13,3 +13,5 @@ ln -sf $DOTFILES/nvim $HOME/.config/nvim
 
 rm -rf $HOME/.config/phpactor
 ln -sf $DOTFILES/phpactor $HOME/.config/phpactor
+
+ln -sf $DOTFILES/.ideavimrc $HOME/.ideavimrc
